--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
       firebase.initializeApp(firebaseConfig);
     </script>
     
-    <script src="js/Player.js"></script>
-    <script src="js/Form.js"></script>
-    <script src="js/Game.js"></script>
-    <link rel="js/stylesheet" type="text/css" href="style.css"/>
+    <script src="./js/Player.js"></script>
+    <script src="./js/Form.js"></script>
+    <script src="./js/Game.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
   </head>
   <body>
     <script src="sketch.js"></script>
